--- a/app/src/main/res/layout/fragmento_informacao.xml
+++ b/app/src/main/res/layout/fragmento_informacao.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Meteoro Transportadora"
+        android:text="Meteoro Logistica"
         android:id="@+id/textView1"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
@@ -17,10 +17,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Versão 1.0"
+        android:text="Transportadora v1.0"
         android:id="@+id/textView2"
         android:layout_below="@+id/textView1"
         android:layout_alignRight="@+id/textView1"
         android:layout_alignEnd="@+id/textView1" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Por Airton Ribeiro"
+        android:id="@+id/textView4"
+        android:layout_below="@+id/textView2"
+        android:layout_alignEnd="@+id/textView2" />
 
 </RelativeLayout>
